Add a missing member to the initialiser macro for the device structure of japanese laser printer vector PDLs. Fix a FPE crash. Bug 689366.

DIFFERENCES:
None

git-svn-id: http://svn.ghostscript.com/ghostscript/trunk@8146 a1074d23-0009-0410-80fe-cf8c14f379e6